# hack-club-space-program

./: .gitignore  Cargo.toml  README.md  build.rs  clippy.toml  deno.json  i18n.toml
.github/workflows/: web.yaml
assets/: .gitignore  default_save.json  default_save.ron
locales/en-US/: hack_club_space_program.ftl
scripts/: build-web.sh  build-web.ts  serve-web.py  test-web.ts
src/: consts.rs  lib.rs  macros.rs  main.rs  math.rs
src/assets/: fonts.rs  icons.rs  mod.rs
src/assets/fonts/: mod.rs
src/assets/icons/: mod.rs
src/builders/: button.rs  camera.rs  celestial.rs  mod.rs  vessel.rs
src/components/: about_menu.rs  camera.rs  celestial.rs  frames.rs  mod.rs  relations.rs  terrain.rs  ui.rs  vessel.rs
src/components/main_game/: camera.rs  celestial.rs  frames.rs  mod.rs  relations.rs  vessel.rs
src/components/main_game/terrain/: gfx.rs  mod.rs
src/components/main_game/ui/: altimeter.rs  controls.rs  mod.rs  oribar.rs  speedometer.rs
src/components/terrain/: collider.rs  gfx.rs
src/consts/: about.rs  colors.rs  controls.rs  keybinds.rs  loading.rs  mod.rs  save-wrapper.schema.json  save_data.json  save_data.schema.json  save_data.toml  saves.rs  si.rs  terrain.rs  ui.rs
src/consts/ui/: altimeter.rs  mod.rs  oribar.rs  popup.rs  speedometer.rs
src/plugins/: about_menu.rs  controls.rs  debug.rs  demo.rs  frame_sync.rs  game.rs  gfx.rs  i18n.rs  logic.rs  main_menu.rs  mod.rs  physics.rs  render.rs  setup.rs  storage.rs  ui.rs
src/plugins/game/: controls.rs  logic.rs  mod.rs  setup.rs
src/plugins/main_game/: controls.rs  debug.rs  gfx.rs  loading.rs  logic.rs  mod.rs  physics.rs  transition.rs  ui.rs
src/resources/: controls.rs  mod.rs  saves.rs  scene.rs  simulation.rs  ui.rs
src/storage/: mod.rs  nonweb.rs  save_data.rs  web.rs
src/storage/nonweb/: dirs.rs  mod.rs  risk.rs
src/storage/web/: dirs.rs  mod.rs
src/systems/: about_menu.rs  frame_sync.rs  gravity.rs  main_menu.rs  mod.rs  orbit.rs  rail.rs  storage.rs  terrain.rs
src/systems/controls/: camera.rs  mod.rs
src/systems/general/: dynamic_text_color.rs  mod.rs  popup.rs  tab_focus.rs  ui.rs  ui_activation.rs
src/systems/main_game/: frame_sync.rs  gravity.rs  mod.rs  rail.rs  transition.rs
src/systems/main_game/controls/: camera.rs  menu.rs  mod.rs
src/systems/main_game/terrain/: collider.rs  gfx.rs
src/systems/main_game/ui/: altimeter.rs  controls.rs  mod.rs  oribar.rs  speedometer.rs
src/systems/terrain/: collider.rs  gfx.rs  mod.rs
src/systems/ui/: controls.rs
src/terrain/: collider.rs  gfx.rs  mod.rs  render.rs
src/web/: mod.rs  panic_handler.rs
tests/: frames.rs  rail.rs  stability.rs  test_time.rs
tests/common/: mod.rs
web/: hack-club-space-program.js  index.html  main.js
