[package]
name = "hack-club-space-program"
version = "0.1.0"
edition = "2024"
publish = false

[lints.clippy]
pedantic = "warn"
needless_pass_by_value = { level = "allow", priority = 1 }
suboptimal_flops = "warn"
imprecise_flops = "warn"

[features]
trace = []

[dependencies]
bevy = "0.17"
bevy_rapier2d = "0.32.0"
derive_more = { version = "2.1.1", features = ["is_variant"] }
fastnoise-lite = { version = "1.1.1", features = ["std", "f64"] }
keplerian_sim = "0.7.3"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.dev.package.rapier2d]
opt-level = 0 # DEBUG

[profile.release]
opt-level = "z"
lto = "thin"
strip = "debuginfo"
