[package]
name = "hack-club-space-program"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
pedantic = "warn"
needless_pass_by_value = { level = "allow", priority = 1 }
suboptimal_flops = "warn"
imprecise_flops = "warn"

[features]
trace = []

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "std",
    "async_executor",
    "android-game-activity",
    "android_shared_stdcxx",
    "gltf_animation",
    "bevy_asset",
    "bevy_audio",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_post_process",
    "bevy_anti_alias",
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_input_focus",
    "bevy_log",
    "mesh_picking",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_image",
    "bevy_mesh",
    "bevy_camera",
    "bevy_light",
    "bevy_shader",
    "bevy_sprite",
    "sprite_picking",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "ui_picking",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    # "default_font",
    "hdr",
    "ktx2",
    "multi_threaded",
    "png",
    "reflect_auto_register",
    "smaa_luts",
    "sysinfo_plugin",
    "tonemapping_luts",
    "vorbis",
    "webgl2",
    "x11",
    "wayland",
    "debug",
    "zstd_rust",
] }
bevy_rapier2d = { version = "0.33.0", features = ["simd-stable"] }
derive_more = { version = "2.1.1", features = ["is_variant"] }
fastnoise-lite = { version = "1.1.1", features = ["std", "f64"] }
keplerian_sim = "0.7.3"
pastey = "0.2.1"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = "z"
lto = "thin"
strip = "debuginfo"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "Window",
    "console",
    "Navigator",
    "Performance",
    "HtmlTextAreaElement",
    "HtmlDocument",
] }
