[package]
name = "hack-club-space-program"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[lints.clippy]
pedantic = "warn"
needless_pass_by_value = { level = "allow", priority = 1 }
suboptimal_flops = "warn"
imprecise_flops = "warn"

[features]
default = ["not-headless"]
not-headless = [
    "bevy/android-game-activity",
    "bevy/android_shared_stdcxx",
    "bevy/gltf_animation",
    "bevy/bevy_audio",
    "bevy/bevy_core_pipeline",
    "bevy/bevy_post_process",
    "bevy/bevy_anti_alias",
    "bevy/bevy_gilrs",
    "bevy/bevy_gizmos",
    "bevy/bevy_gltf",
    "bevy/mesh_picking",
    "bevy/bevy_pbr",
    "bevy/bevy_picking",
    "bevy/bevy_render",
    "bevy/bevy_scene",
    "bevy/bevy_image",
    "bevy/bevy_mesh",
    "bevy/bevy_camera",
    "bevy/bevy_light",
    "bevy/bevy_shader",
    "bevy/bevy_sprite",
    "bevy/sprite_picking",
    "bevy/ui_picking",
    "bevy/bevy_ui_render",
    "bevy/bevy_window",
    "bevy/bevy_winit",
    "bevy/custom_cursor",
    "bevy/hdr",
    "bevy/ktx2",
    "bevy/png",
    "bevy/smaa_luts",
    "bevy/tonemapping_luts",
    "bevy/vorbis",
    "bevy/webgl2",
    "bevy/x11",
    "bevy/wayland",
    "bevy/debug",
]
trace = []

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "std",
    "async_executor",
    "bevy_asset",
    "bevy_color",
    "bevy_input_focus",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_log",
    "multi_threaded",
    "reflect_auto_register",
    "sysinfo_plugin",
    "zstd_rust",
] }
bevy_rapier2d = { version = "0.33.0", features = ["serde-serialize", "simd-stable"] }
derive_more = { version = "2.1.1", features = ["is_variant"] }
fastnoise-lite = { version = "1.1.1", features = ["std", "f64"] }
i18n-embed = { version = "0.16.0", features = ["fluent-system"] }
i18n-embed-fl = { version = "0.10.0", features = ["dashmap"] }
keplerian_sim = { version = "0.7.3", features = ["serde"] }
pastey = "0.2.1"
rand = "0.10.0"
rust-embed = "8.11.0"
serde = { version = "1.0.228", features = ["derive"] }
strum = { version = "0.28.0", features = ["derive"] }
toml = "1.0.6"
unic-langid = "0.9.6"

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3
lto = "fat"
strip = "debuginfo"

[target.'cfg(target_family = "wasm")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
    "Document",
    "Element",
    "Window",
    "console",
    "Navigator",
    "Performance",
    "HtmlTextAreaElement",
    "HtmlDocument",
] }

[build-dependencies]
png = "0.18.1"
resvg = "0.47.0"
texture_packer = "0.30.0"

[dev-dependencies]
serde_test = "1.0.177"
